crudkit-id/crates/derive-crudkit-id/tests/12-error-f32.rs
#![allow(dead_code)]

use derive_crudkit_id::CkId;

#[derive(CkId)]
pub struct Foo {
    #[ck_id(id)]
    id: f32,
}

fn main() {}
